# NixRar

./: .gitignore  ABOUT.md  AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  Archive.cpp  Archive.h  CMakeLists.txt  DEVELOPMENT.md  FileExplorer.cpp  FileExplorer.h  FileExplorerModel.cpp  FileExplorerModel.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  NixRar.qrc  PasswordDialog.cpp  PasswordDialog.h  PasswordDialog.ui  README.md  main.cpp  meson.build
.github/workflows/: build-linux.yml
libs/LibNixRar/: CMakeLists.txt  meson.build
libs/LibNixRar/src/: NixRarUtils.cpp
libs/libbarchive/: CMakeLists.txt
libs/libbarchive/include/libbarchive/: archive_utils.h
resources/: Info.plist.in  nixrar.desktop  nixrar.icns
scripts/: build-appimage.sh  build-macos-release.sh  create-icon.sh  fix-macos-deployment.sh
